@@ -1,3 +1,9 @@
+2004-12-18  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkaboutdialog.c (gtk_about_dialog_get_logo_icon_name): 
+	(gtk_about_dialog_init): Add missing initializations.  (#161646,
+	Torsten Schoenfeld)
+
 2004-12-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
